# py-sec-edgar

./: .env.example  .env.template  .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE_REFACTORING_PLAN.md  AUTHORS.rst  CAPTURE_SPINE_ANALYSIS.md  CLI_TESTING_GUIDE.md  CONTRIBUTING.rst  DUPLICATION_ANALYSIS.md  EXAMPLES_RUNNER.md  HISTORY.rst  INTEGRATION_MANIFESTO.md  LICENSE  LLM_HANDOFF.md  MANIFEST.in  Makefile  REACT_COMPONENT_EXTRACTION_PLAN.md  README.md  README.rst  RELEASE_CHECKLIST.md  SEC_ENTITY_REFACTORING.md  TODO.md  TODO_REFACTORED.md  VALIDATION_REPORT.md  WORKFLOW_TESTS_COMPLETE.md  docker-compose.yml  dockerfile  fix_tests.py  project_meta.yaml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  requirements_dev.txt  run_examples.bat  run_examples_simple.py  setup.cfg  (+4 more)
config/: Dockerfile-rabbitmq  TICKERCHECK_CIK_COMPANIES_ONLY.xlsx  celery.dockerfile  definitions.json  docker-start-celery.sh  flower.dockerfile  rabbitmq.config  supervisord.conf  user_agents.txt
data/: TICKERCHECK_CIK_COMPANIES_ONLY.xlsx  cik_ticker_name_exchange_sic_business_incorporated_irs.xlsx  cik_tickers.xlsx
docs/: ALERTING_SYSTEM_SUMMARY.md  AUDIT_TOOLS_GUIDE.md  CHANGELOG.md  FEATURES.md  GETTING_STARTED.md  INTEGRATION_IMPLEMENTATION_PLAN.md  LOGGING_AND_MONITORING_OPTIONS.md  LOGGING_CONFIGURATION_REPORT.md  Makefile  REAL_TIME_ALERTING.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: README.md  download_and_extract_filing.py  download_and_extract_filings.py  download_full_index_filings.py  extract_sections.py  fortune500.csv  portfolio.csv  renewable_energy.csv  sp500_tickers.csv  start.py  tickers.csv
genai-spine/: AUDIT_RESULTS.md  CHANGELOG.md  CHATGPT_RESEARCH_PROMPT.md  CHAT_SESSIONS_IMPLEMENTATION.md  DOCKER_DEPLOYMENT.md  FEATURE_ANALYSIS_MATRIX.md  FRONTEND_TEST_STATUS.md  FRONTEND_UI_UPDATE.md  GENAI_SERVICE_DESIGN.md  IMPLEMENTATION_PROMPT.md  Makefile  OPEN_SOURCE_ALTERNATIVES.md  PROJECTS_TO_STUDY.md  README.md  RELEASE_v0.2.0.md  STATUS.md  TODO.md  pyproject.toml
genai-spine/alignment/: status.md
genai-spine/alignment/completed/: README.md
genai-spine/alignment/plans/: README.md
genai-spine/client/: README.md  pyproject.toml
genai-spine/client/examples/: capture_spine_usage.py
genai-spine/client/genai_spine_client/: __init__.py  client.py  types.py
genai-spine/docs/: CAPTURE_SPINE_INTEGRATION.md  ECOSYSTEM_INTEGRATION.md  README.md
genai-spine/docs/adr/: ADR-0001-domain-agnostic.md  README.md
genai-spine/docs/api/: API_CONTRACT.md  API_TIERS.md  AUTH.md  ERRORS.md  README.md
genai-spine/docs/architecture/: OVERVIEW.md  PROVIDERS.md  TIERS.md
genai-spine/docs/capabilities/: README.md  TIER_1_BASIC.md  TIER_2_INTERMEDIATE.md  TIER_3_ADVANCED.md  TIER_4_MINDBLOWING.md
genai-spine/docs/core/: COST_TRACKING.md  PROMPT_MANAGEMENT.md  RAG.md
genai-spine/docs/domains/: README.md
genai-spine/docs/domains/financial-markets/: CAPABILITIES.md  INTEGRATION.md  README.md
genai-spine/docs/features/: GENAI_ADMIN_UI.md  MULTI_MODEL_REVIEW_WORKFLOW.md  README.md
genai-spine/docs/guides/: ADDING_CAPABILITIES.md  ADDING_PROVIDERS.md  ARCHITECTURE_ALIGNMENT.md  CONVENTIONS.md  DEPLOYMENT.md  DOCUMENTATION_BEST_PRACTICES.md  GUARDRAILS.md  MANIFESTS.md  TESTING.md
genai-spine/docs/integration/: CAPTURE_SPINE_INTEGRATION_ANALYSIS.md  CONSUMER_QUICKSTART.md  MIGRATION_CHECKLIST.md  README.md
genai-spine/docs/prompts/: REVIEW_ANALYSIS_PROMPT.md
genai-spine/examples/: 01_health_check.py  02_chat_completion.py  03_summarization.py  04_entity_extraction.py  05_classification.py  06_rewrite.py  07_title_inference.py  08_commit_generation.py  09_prompt_management.py  10_cost_tracking.py  __init__.py  run_all_examples.py
genai-spine/frontend/: .dockerignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
genai-spine/frontend/e2e/: chat.spec.ts  classify.spec.ts  commit.spec.ts  extract.spec.ts  health.spec.ts  navigation.spec.ts  prompts.spec.ts  rewrite.spec.ts  summarize.spec.ts  title.spec.ts  usage.spec.ts
genai-spine/frontend/src/: App.tsx  api.ts  index.css  main.tsx
genai-spine/frontend/src/pages/: ChatPage.tsx  ClassifyPage.tsx  CommitPage.tsx  ExtractPage.tsx  HealthPage.tsx  KnowledgePage.tsx  PromptsPage.tsx  RewritePage.tsx  SessionsPage.tsx  SummarizePage.tsx  TitlePage.tsx  UsagePage.tsx
genai-spine/src/genai_spine/: __init__.py  compat.py  main.py  settings.py
genai-spine/src/genai_spine/api/: __init__.py  app.py  deps.py  tracking.py
genai-spine/src/genai_spine/api/routers/: __init__.py  capabilities.py  chat.py  commit.py  completions.py  execute.py  health.py  models.py  prompts.py  rewrite.py  sessions.py  usage.py
genai-spine/src/genai_spine/capabilities/: __init__.py  classification.py  commit.py  cost.py  extraction.py  rewrite.py  summarization.py
genai-spine/src/genai_spine/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  registry.py
genai-spine/src/genai_spine/storage/: __init__.py  models.py  postgres.py  protocols.py  schemas.py  seed.py  sqlite.py
genai-spine/src/genai_spine/storage/backends/: __init__.py  postgres.py  sqlite.py
genai-spine/src/genai_spine/storage/shared/: __init__.py  converters.py  query_builders.py  validators.py
genai-spine/tests/: conftest.py  test_api_endpoints.py
genai-spine/tests/unit/test_api/: __init__.py  test_sessions.py  test_usage.py
genai-spine/tests/unit/test_capabilities/: test_cost.py
genai-spine/tests/unit/test_providers/: test_anthropic.py  test_base.py  test_mock.py  test_registry.py
genai-spine/tests/unit/test_storage/: test_storage.py
monitoring/: ELASTICSEARCH_GRAFANA_SETUP.md  ENTITYSPINE_AUTO_LAUNCH.md  ENTITYSPINE_SERVICES.md  ENTITYSPINE_WEB_IMPLEMENTATION.md  HEALTH_CHECKS.md  INTEGRATION_STATUS.md  check-health.ps1  docker-compose.monitoring.yml  ecosystem-dashboard.html  loki-config.yml  promtail-config.yml  start-entityspine.ps1
prompts/: DOCUMENTATION_ALIGNMENT_PROMPT.md  ECOSYSTEM_INTEGRATION.md  (+9 more)
(+236 files in other folders)
