[project]
name = "genai-spine"
version = "0.1.0"
description = "Unified GenAI service for the Spine ecosystem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Ryan McCoy" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]
postgres = [
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
]
redis = [
    "redis>=5.0.0",
]
aws = [
    "boto3>=1.35.0",
]
# Ecosystem integration - shared types from sibling packages
ecosystem = [
    "entityspine>=0.3.0",  # Result[T], ExecutionContext, ErrorCategory
    # "spine-core>=0.1.0",  # Pipeline, QualityRunner (uncomment when needed)
]
all = [
    "genai-spine[dev,postgres,redis,aws,ecosystem]",
]

[project.scripts]
genai-spine = "genai_spine.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genai_spine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
