[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-spine-client"
version = "0.1.0"
description = "Typed HTTP client for GenAI Spine API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["genai_spine_client"]
